# rust-wss-grpc

./: .gitignore  Cargo.toml  README.md  build.rs
src/: build.rs  main.rs
src/protos/: signal.proto
src/rest/: bn_rest.rs  mod.rs
src/rpc/: mod.rs  rpc_server.rs  rpc_types.rs  signal.rs
src/test-grpc/: Cargo.toml  build.rs
src/test-grpc/py/: build.sh  client.py  client_main.py  signal_pb2.py  signal_pb2_grpc.py
src/test-grpc/src/: server.rs
src/wss/: bn_wss.rs  bn_wss_type.rs  bookticker.rs  mod.rs  test_wss.rs  wss_test.rs
