[package]
name = "rust-wss-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.114"
#clap = { version = "4.5.1", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.11.11", features = ["json"] }
tonic = "0.11.0"
futures = "0.3.30"
chrono = "0.4"
prost = "0.12.3"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
dashmap = "5.5.3"
tracing-appender = "*"
tracing-futures = "0.2.5"
time = "0.3.34"
tracing-log = "0.2.0"

[build-dependencies]
tonic-build = "0.11.0"
prost = "0.12.3"
